--- a/pequenino.html
+++ b/pequenino.html
@@ -33,7 +33,7 @@
       <nav>
 
         <ul class="menu-links">
-          <li><a href="./sueno.html">Principal</a>
+          <li><a href="./index.html">Principal</a>
       </ul>
 
         <ul class="menu-links">
